feat: add a bunch of different filters to choose from
